# Weeb_Big2

./: .gitmodules  AppWindow.cpp  AppWindow.h  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Weeb_Big2.cpp  Weeb_Big2.h
shaders/: fs_model.sc  fs_outline.sc  fs_weeb.sc  varying.def.sc  vs_outline.sc  vs_weeb.sc
src/: AppWindow.cpp  AppWindow.h  Weeb_Big2.cpp  Weeb_Big2.h
src/Data/: Camera.cpp  Camera.h  Light.cpp  Light.h  Model3D.cpp  Model3D.h  Texture2D.cpp  Texture2D.h
src/Input/: CameraController.cpp  CameraController.h
src/Rendering/: ModelRenderer.cpp  ModelRenderer.h
src/UI/: CameraDebugUI.cpp  CameraDebugUI.h  LightDebugUI.cpp  LightDebugUI.h  ModelDebugUI.cpp  ModelDebugUI.h  RenderStatsOverlay.cpp  RenderStatsOverlay.h
